# elf2exp

./: LICENSE  README.md  elf2exp.py  pyproject.toml
src/: elf2exp.py
